After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 758595 - two-lines-renderer: Warning fixes
two-lines-renderer: Warning fixes
Status: RESOLVED FIXED
Product: libgd
Classification: Platform
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: libgd maintainer(s)
libgd maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-11-24 13:14 UTC by Bastien Nocera
Modified: 2015-11-24 14:53 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
two-lines-renderer: Fix typo in comment (996 bytes, patch)
2015-11-24 13:14 UTC, Bastien Nocera
committed Details | Review
two-lines-renderer: Fix warnings with newer GTK+ (2.00 KB, patch)
2015-11-24 13:14 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2015-11-24 13:14:28 UTC
.
Comment 1 Bastien Nocera 2015-11-24 13:14:32 UTC
Created attachment 316163 [details] [review]
two-lines-renderer: Fix typo in comment
Comment 2 Bastien Nocera 2015-11-24 13:14:39 UTC
Created attachment 316164 [details] [review]
two-lines-renderer: Fix warnings with newer GTK+

The line renderer was generating loads of errors following CSS changes
in GTK+ 3.19.

See https://blogs.gnome.org/mclasen/2015/11/20/a-gtk-update/ for details
and work-arounds.
Comment 3 Debarshi Ray 2015-11-24 14:21:23 UTC
Review of attachment 316163 [details] [review]:

Of course. Thanks.
Comment 4 Debarshi Ray 2015-11-24 14:29:21 UTC
Review of attachment 316164 [details] [review]:

Looks good to me.
Comment 5 Bastien Nocera 2015-11-24 14:53:28 UTC
Attachment 316163 [details] pushed as e54218e - two-lines-renderer: Fix typo in comment
Attachment 316164 [details] pushed as 7c12355 - two-lines-renderer: Fix warnings with newer GTK+