two-lines-renderer: Fix typo in comment

https://bugzilla.gnome.org/show_bug.cgi?id=758595