libgd/gd-two-lines-renderer.c
@@ -374,7 +374,7 @@ gd_two_lines_renderer_get_preferred_width (GtkCellRenderer *cell,
                                   NULL, 
                                   NULL, NULL, NULL);
 
-  /* Fetch the average size of a charachter */
+  /* Fetch the average size of a character */
   context = gtk_widget_get_pango_context (widget);
   gtk_style_context_get (style_context, 0, "font", &font_desc, NULL);
   metrics = pango_context_get_metrics (context, font_desc,
